--- a/Views/Papers/Edit.cshtml
+++ b/Views/Papers/Edit.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div>
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div class="row row-new">
                 <div class="column">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
