--- a/Views/Reviewers/Create.cshtml
+++ b/Views/Reviewers/Create.cshtml
@@ -12,11 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Active" class="control-label"></label>
-                <input asp-for="Active" class="form-control" />
-                <span asp-validation-for="Active" class="text-danger"></span>
-            </div>
+            <h5>Contact Information</h5>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
@@ -77,6 +73,8 @@
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
+            <h5>Review Topics</h5>
+            <p>Please indicate the topics in which you are knowledgable and/or interested</p>
             <div class="form-group">
                 <label asp-for="AnalysisOfAlgorithms" class="control-label"></label>
                 <input asp-for="AnalysisOfAlgorithms" class="form-control" />
