--- a/Views/Reviewers/Index.cshtml
+++ b/Views/Reviewers/Index.cshtml
@@ -13,13 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Active)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MiddleInitial)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.LastName)
@@ -31,145 +25,34 @@
                 @Html.DisplayNameFor(model => model.Department)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Address)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.City)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.State)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ZipCode)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.EmailAddress)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Password)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AnalysisOfAlgorithms)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Applications)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Architecture)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ArtificialIntelligence)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ComputerEngineering)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cirriculum)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DataStructures)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Databases)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DistanceLearning)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DistributedSystems)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EthicalSocietalIssues)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FirstYearComputing)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.GenderIssues)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.GrantWriting)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.GraphicsImageProcessing)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HumanComputerInteraction)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LaboratoryEnvironments)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Literacy)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MathematicsInComputing)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MultiMedia)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NetworkingDataCommunications)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NonMajorCourses)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ObjectOrientedIssues)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OperatingSystems)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ParallelProgramming)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Research)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Security)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SoftwareEngineering)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SystemEngineering)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SystemsAnalysisAndDesign)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UsingTechnologyInTheClassroom)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.WebAndInternetProgramming)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Other)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OtherDescription)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ReviewsAcknowledged)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
+
+    @* Logic to display reviewers index only to reviewers *@
+    @if(LoginManager.IsLoggedIn == false)
+    {
+        //break from loop if user is not logged in
+        break;
+    }
+    @if(LoginManager.UserType == "Author")
+    {
+        //break from loop if user is an author
+        break;
+    }
+    @if(LoginManager.UserType == "Reviewer" && LoginManager.UserId != item.ReviewerID)
+    {
+        //if user is a reviewer only show their information
+        continue;
+    }
+
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Active)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MiddleInitial)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.LastName)
@@ -181,130 +64,7 @@
                 @Html.DisplayFor(modelItem => item.Department)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.City)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.State)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ZipCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.EmailAddress)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Password)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AnalysisOfAlgorithms)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Applications)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Architecture)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ArtificialIntelligence)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ComputerEngineering)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cirriculum)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DataStructures)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Databases)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DistanceLearning)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DistributedSystems)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EthicalSocietalIssues)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstYearComputing)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GenderIssues)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GrantWriting)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.GraphicsImageProcessing)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HumanComputerInteraction)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LaboratoryEnvironments)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Literacy)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MathematicsInComputing)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MultiMedia)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NetworkingDataCommunications)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NonMajorCourses)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ObjectOrientedIssues)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OperatingSystems)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ParallelProgramming)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Research)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Security)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SoftwareEngineering)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SystemEngineering)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SystemsAnalysisAndDesign)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UsingTechnologyInTheClassroom)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.WebAndInternetProgramming)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Other)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OtherDescription)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ReviewsAcknowledged)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ReviewerID">Edit</a> |
