Updates to reports and various parts of system

--- a/Views/Defaults/Edit.cshtml
+++ b/Views/Defaults/Edit.cshtml
@@ -26,7 +26,7 @@
                 <select asp-for="EnabledAuthors" class="form-control">
                     <option selected id="True">True</option>
                     <option id="False">False</option>
-                </select>>
+                </select>
                 <span asp-validation-for="EnabledAuthors" class="text-danger"></span>
             </div>
             <div class="form-group">
