--- a/Views/Home/Reports.cshtml
+++ b/Views/Home/Reports.cshtml
@@ -12,3 +12,13 @@
     @* weighted average *@
     <a asp-controller="Papers" asp-action="WeightedAverage">Click to view Weighted Average Report</a>
 </div>
+
+<div>
+    @* Scores *@
+    <a asp-controller="Reviews" asp-action="Scores">Click to view Scores Report</a>
+</div>
+
+<div>
+    @* Review Comments *@
+    <a asp-controller="Reviews" asp-action="ReviewComments">Click to view Review Comments Report</a>
+</div>
