--- a/Views/Papers/Index.cshtml
+++ b/Views/Papers/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>Papers</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create Submission</a>
 </p>
 
 <p>@ViewBag.PaperErrors</p>
