--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -39,6 +39,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reports">Reports</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Defaults" asp-action="Index">Settings</a>
+                            </li>
                         }
                         @* Reviewer navigation *@
                         else if(LoginManager.UserType == "Reviewer")
