--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -123,3 +123,23 @@ a:link a:visited {
 .fontC {
     font-family: "Lucida Handwriting", Times, serif;
 }
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+table th {
+    font-size: .85em;
+    letter-spacing: .1em;
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+    text-align: right;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
