Login/Registration bug fixes

--- a/Views/Authors/Index.cshtml
+++ b/Views/Authors/Index.cshtml
@@ -39,7 +39,7 @@
             continue;
         }
     }
-    else if(!LoginManager.IsAdmin()){
+    else if(LoginManager.IsAdmin() == false){
         continue;
     }
 
