--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -83,10 +83,10 @@
                     else
                     {
                         <li class="nav-item">
-                            <a asp-action="Login" class="main-button" style="border: none;">Login</a>
+                            <a asp-controller="Home" asp-action="Login" class="main-button" style="border: none;">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a asp-action="Register" class="main-button" style="border: none;">Register</a>
+                            <a asp-controller="Home" asp-action="Register" class="main-button" style="border: none;">Register</a>
                         </li>
                     }
 
